--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello</h1>
-    <p>this thing on?</p>
-
-
-    <script src="server.js"></script>
+    <h1>Welkom op de homepagina</h1>
+    <h2>Mede mogelijk gemaakt door EJS</h2>
 </body>
 </html>
