--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welkom op de homepagina</h1>
-    <h2>Mede mogelijk gemaakt door EJS</h2>
+    <%- include('partials/nav')%>
 </body>
 </html>
