--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,5 +8,18 @@
 </head>
 <body>
     <%- include('partials/nav')%>
+    <div class="container">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <label for="username">Username:</label>
+            <input type="text" id="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" required>
+
+            <button type="button" onclick="login()">Login</button>
+        </form>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
