Eigen server inhoud veranderen naar de team server

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,32 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <%- include('partials/nav')%>
-    <form action="/" method="post">
-    <label for ="title"> Title of the movie:</label>
-    <input type = "text" name="title" id="title"required>
 
-    <label for ="story">Plot of the movie:</label>
-    <textarea name="story" id="story" rows="5" cols="33">
-    </textarea>
+        <h1>test</h1>
+        <form method="post" action="/">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password</label>
+            <input type="password" id="Password" name="password" required>
+            <input type="submit" placeholder="Verzenden"></input>
+        </form>
 
-    <input type="submit" value ="Add movie">
-    </form>
-    <h3> Movies</h3>
-    <article>
-        <% for (let index=0; index < data.length; index++) { %>
-            <h2><%= data[index].title %></h2>
-            <p><%= data[index].story %></p> <% } %>
- 
-    </article>
-
-    
-
-    
-
-    <script src="script.js"></script>
 </body>
 </html>
