Unfinished filter system

--- a/views/filter.ejs
+++ b/views/filter.ejs
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Willekeurig Kunstwerk</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
 <h1>Willekeurig Kunstwerk</h1>
-<%
-    // Genereer een willekeurig getal tussen 0 en de lengte van de array 'art'
-    var randomIndex = Math.floor(Math.random() * art.length);
-    var randomArtwork = art[randomIndex];
-%>
-<li>Naam: <%= randomArtwork.kunstwerk %></li>
-<li>Museum: <%= randomArtwork.museum %></li>
-<li>Artiest: <%= randomArtwork.artiest %></li>
-<li>Jaartal: <%= randomArtwork.jaartal %></li>
+
+<div id="kunstwerkInfo">
+    <% art.forEach(artwork => { %>
+        <p>Naam: <%= artwork.kunstwerk %></p>
+        <p>Museum: <%= artwork.museum %></p>
+        <p>Artiest: <%= artwork.artiest %></p>
+        <p>Jaartal: <%= artwork.jaartal %></p>
+        <br> 
+    <% }); %>
+</div>
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
