--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pantheon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Main page</h1>
 
-    <!-- code to display list of usernames and password-->
-    <% users.forEach(user => { %>
-        <li><%= user.username %></li>
-        <li><%= user.password %></li>
-    <% }); %>
 
-    <form method="post" action="/index">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password</label>
-        <input type="password" id="Password" name="password" required>
-        <input type="submit" placeholder="Verzenden"></input>
+<body class="loginBody">
+    <header>
+        <img src="./svg/logopantheon.svg">
+    </header>
+    <h1 >Welcome to Pantheon!</h1>
+    <form class="form">
+        <a href="/login" class="indexButton">Login</a>
+        <a href="/register" class="indexButton">Create an account</a>
     </form>
-    
 </body>
+
 </html>
